[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "axor-benchmarks"
version = "0.1.1"
description = "Benchmark governed vs raw Claude on your codebase"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["benchmark", "claude", "axor", "llm", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "axor-core>=0.1.0",
    "axor-claude>=0.1.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
axor-bench = "benchmarks.run:main"

[project.urls]
Repository = "https://github.com/Bucha11/axor-benchmarks"
"Bug Tracker" = "https://github.com/Bucha11/axor-benchmarks/issues"
Changelog = "https://github.com/Bucha11/axor-benchmarks/releases"

[tool.hatch.build.targets.wheel]
packages = ["benchmarks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
